compiler/tests/ar/errors/pure_fnval.salam
// لغة: العربية
// توقع: E012
نقي دالة طبق(ح: دالة (صحیح) صحیح, قیمة: صحیح): صحیح:
    أرجع ح(قیمة)
نهاية

دالة الرئیسیة:
    خ := (مقدار: صحیح) => مقدار + 1
    اطبع طبق(خ, 4)
نهاية
